galleroid.css
/* Mobile */

body {
    background-color: lightcoral;
}

#galleroid {
	display: flex;
  	justify-content: space-around;
    flex-flow: row wrap;
  	width: 100%;
    margin: 0 auto 0;
}

#galleroid * {
    box-sizing: border-box;
}

.galleroid-item,
.galleroid-title,
.galleroid-picture,
.galleroid-text {
    transition: all 0.2s ease-in;
}

.galleroid-item.active,
.galleroid-title.active,
.galleroid-picture-container.active > .galleroid-picture,
.galleroid-text-container.active > .galleroid-text {
    transition: all 0.25s ease-out;
}

.galleroid-item-wrapper {
    height: 90vw;
    width: 100%;
    overflow: visible;
}

.galleroid-item {
    width: 60%;
    margin: 20vw 20vw 0;
    border-width: 5vw 5vw 0;
    background-color: white;
    border-style: solid;
    border-color: white;
    border-radius: 2px;
    display: grid;
    grid-gap: 0px;
    grid-template-columns:  0       auto    0;
    grid-template-rows:     auto
                            15vw 
                            auto;  
    grid-template-areas: '  pic     pic     pic' 
                         '  prev    title   next' 
                         '  text    text    text';
    

    position: relative;
    padding: 0;
    z-index: 1;
    box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.2);
}

.galleroid-item.active {
    width: 96%;
    border-width: 2vw;
    border-radius: 4px;
    grid-template-columns:  10%    auto    10%;
    grid-template-rows:     auto
                            auto
                            auto;
    z-index: 10;
    box-shadow: 0 1vw 4vw 0 rgba(0, 0, 0, 0.5);
}

.galleroid-picture-container {
    width: 100%;
    height: 50vw;
    background-color: grey;
    border-radius: 2px;
    margin: 0 auto;
    cursor: pointer;
    grid-area: pic;
    transition: height 0.2s ease-in;
    z-index: inherit;
    overflow: hidden;
    position: relative;
}

.galleroid-picture-container.active {
    height: calc(100vh - 22vw - 126px);
    border-radius: 4px;
    margin: 0 auto;
    transition: height 0.25s ease-out;
}

.galleroid-picture {
    object-fit: contain;
    width: 100%;
    height: 50vw;
    position: absolute;
}

.galleroid-picture-container.active > .galleroid-picture {
    height: calc(100vh - 22vw - 126px);
}

.galleroid-picture.active,
.galleroid-text.active {
    opacity: 1;
    transform: translateX(0%);
}

.galleroid-picture.hidden-left,
.galleroid-text.hidden-left {
    opacity: 0;
    transform: translateX(-100%);
}

.galleroid-picture.hidden-right,
.galleroid-text.hidden-right {
    opacity: 0;
    transform: translateX(100%);
}

.galleroid-title {
    font-size: 1em;
    font-family: Arial, Helvetica, sans-serif;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
	background-color: none;
	text-align: center;
	max-width: 70vw;
	text-align: center;
    margin: auto;
    grid-area: title;
    max-width: 50vw;
}

.galleroid-title.active {
    transform: scale(1.5);
    max-width: 46vw;
}

.galleroid-previous-button,
.galleroid-next-button {
    display: none;
    width: 0;
    height: 10vw;
    border-radius: 4px;
    color: white;
    background-color: lightgrey;
    border: none;
    padding: 0;
    margin: 0;
    cursor: pointer;
}

.galleroid-previous-button.active,
.galleroid-next-button.active {
    display: block;
    width: 10vw;
    height: 10vw;
    margin: 2vw 0;
}

.galleroid-previous-button {
    grid-area: prev;
}

.galleroid-next-button {
    grid-area: next;
    justify-self: end;
}

.galleroid-text-container {
    display: none;
    width: 100%;
    height: 126px;
    grid-area: text;
    position: relative;
    overflow: hidden;
}

.galleroid-text-container.active {
    display: block;
}

.galleroid-text {
    text-align: center;
    margin: auto;
    overflow: hidden;
    white-space: normal;
    position: absolute;
    max-height: 126px;
}

/* Tablet */

@media only screen and (min-width: 500px) {
    .galleroid-item-wrapper:nth-child(4n+1) > .galleroid-item,
    .galleroid-item-wrapper:nth-child(4n+3) > .galleroid-item  {
        margin-left: 12vw;
        margin-right: 8vw;
    }

    .galleroid-item-wrapper:nth-child(4n) > .galleroid-item,
    .galleroid-item-wrapper:nth-child(4n+2) > .galleroid-item {
        margin-right: 12vw;
        margin-left: 8vw;
    }

    .galleroid-item-wrapper {
        height: 45vw;
        width: 50%;
    }

    .galleroid-item {
        width: 30vw;
        margin-top: 10vw;
        margin-bottom: 10vw;
        border-width: 2.5vw 2.5vw 0;
        grid-template-rows: auto
                            7.5vw
                            auto;
    }

    .galleroid-item.active {
        width: 192%;
        grid-template-columns:  5%    auto    5%;
    }

    .galleroid-picture-container,
    .galleroid-picture {
        height: 25vw;
    }

    

    .galleroid-picture-container.active,
    .galleroid-picture-container.active > .galleroid-picture {
        height: calc(100vh - 17vw - 54px);
    }

    .galleroid-title {
        max-width: 25vw;
    }

    .galleroid-previous-button,
    .galleroid-next-button {
        height: 5vw;
        width: 5vw;
    }

    .galleroid-previous-button.active,
    .galleroid-next-button.active {
        height: 5vw;
        width: 5vw;
        margin: 2vw 0;
    }

    .galleroid-text-container {
        height: 54px;
    }
    
    .galleroid-text.active {
        max-height: 54px;
    }
}

/* Desktop */

@media only screen and (min-width: 750px) {
    .galleroid-item-wrapper:nth-child(4n+1) > .galleroid-item {
        margin-left: 6.5vw;
        margin-right: 3.5vw;
    }

    .galleroid-item-wrapper:nth-child(4n+2) > .galleroid-item {
        margin-left: 5.5vw;
        margin-right: 4.5vw;
    }

    .galleroid-item-wrapper:nth-child(4n+3) > .galleroid-item {
        margin-left: 4.5vw;
        margin-right: 5.5vw;
    }

    .galleroid-item-wrapper:nth-child(4n) > .galleroid-item {
        margin-left: 3.5vw;
        margin-right: 6.5vw;
    }

    .galleroid-item-wrapper {
        height: 22.5vw;
        width: 25%;
    }

    .galleroid-item {
        width: 15vw;
        margin-top: 5vw;
        margin-bottom: 5vw;
        border-width: 1.25vw 1.25vw 0;
        grid-template-rows: auto
                            3.75vw
                            auto;
    }

    .galleroid-item.active {
        border-width: 1vw;
        width: 392%;
    }

    .galleroid-picture-container,
    .galleroid-picture {
        height: 12.5vw;
    }

    .galleroid-picture-container.active,
    .galleroid-picture-container.active > .galleroid-picture {
        height: calc(100vh - 11vw - 54px);
    }

    .galleroid-title {
        max-width: 12.5vw;
    }

    .galleroid-previous-button,
    .galleroid-next-button {
        height: 2.5vw;
        width: 2.5vw;
    }

    .galleroid-previous-button.active,
    .galleroid-next-button.active {
        margin: 1vw 0;
    }

}

